[build-system]
requires = [
    "setuptools>=42",
    "Cython",
]

[tool.cibuildwheel.linux]
environment = "CC='g++' CXX='g++' MERCURY_DIR='./' ENV_CFLAGS='-DOPENSSL_V1_1'"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"

[tool.cibuildwheel.macos]
environment = "CC='g++' CXX='g++' MERCURY_DIR='./' ENV_CFLAGS='-DSSLNEW' LDFLAGS='-L/opt/homebrew/opt/openssl/lib' CPPFLAGS='-I/opt/homebrew/opt/openssl/include' MACOSX_DEPLOYMENT_TARGET=15"
