# pyproject.toml — mercury-python
#
# When changing the setuptools minimum in [build-system].requires or the
# requires-python floor below, update the corresponding checks in
# configure.ac so that CAN_BUILD_CYTHON_PACKAGE stays in sync.

[build-system]
requires = ["setuptools>=77", "Cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-python"
dynamic = ["version"]
description = "Python interface into mercury's network protocol fingerprinting and analysis functionality"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Blake Anderson", email = "blake.anderson@cisco.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
keywords = ["tls", "fingerprinting", "network", "traffic", "analysis"]

[project.urls]
Homepage = "https://github.com/cisco/mercury"

[tool.setuptools.dynamic]
version = { attr = "_version.__version__" }

# Only the C extension matters — no pure-Python modules to ship.
[tool.setuptools]
py-modules = []

# Note: -DHAVE_XSIMD requires ./configure --enable-xsimd
[tool.cibuildwheel.linux]
environment = "CC='g++' CXX='g++' ENV_CFLAGS='-DHAVE_XSIMD'"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"

[tool.cibuildwheel.macos]
environment = "CC='g++' CXX='g++' ENV_CFLAGS='-DHAVE_XSIMD' LDFLAGS='-L/opt/homebrew/opt/openssl/lib' CPPFLAGS='-I/opt/homebrew/opt/openssl/include -I/opt/homebrew/include'"
